final css for the issue of the content behind

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ ul li a {
         flex-direction:column;
         align-items:flex-start;
         gap:1.7rem;
-        position:relative;
+        position:absolute;
         display:none;
         height:100vh;
         top:0;
